fixed position on tablet

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,17 +238,22 @@ footer {
 .other-img {
   vertical-align: middle;
   position: absolute;
-  left: 40px;
+  left: 80px;
   top: 0;
 }
 
 .trump-img {
   vertical-align: middle;
   position: relative;
-  right: 40px;
+  right: 0;
   top: 12px;
 }
 
 .info-trump a {
   font-size: 20px;
+}
+
+.info-sub {
+  position: relative;
+  bottom: 20px;
 }
